@@ -395,7 +395,6 @@ body {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 300px;
 	height : 30px;
 	margin-right : 50px;
 	text-align : right;
@@ -914,7 +913,7 @@ h1.wizard-header {
 
 #stat-shutdown input[type=submit] {
 	display : inline;
-	width : 100px;
+	width : 120px;
 }
 
 #content table#ui-stat-table td.ui-stat-table-col1{
