@@ -85,7 +85,7 @@ div#current_jobs
 
 div#settings input
 {
-	width:125px;
+	width:160px;
 }
 
 div#settings input[type=checkbox]
@@ -138,7 +138,7 @@ div.force_settings
 	vertical-align:middle;
 }
 
-div.force_settings input
+table#backup div.force_settings input
 {
 	margin-left:5px;
 	margin-right:5px;
@@ -171,7 +171,7 @@ fieldset.fld_settings
 input#backup_restore
 {
 	margin-top:10px;
-	width:125px!important;
+	width:170px!important;
 }
 
 input.cb_force
@@ -181,7 +181,7 @@ input.cb_force
 
 input.incexc
 {
-	width:80px;
+	width:100%;
 }
 
 li.selected
