@@ -6,8 +6,8 @@
 
 	<div id="sideboard-datetime">
 		<div id="sideboard-datetime-date"><?=date("d")?></div>
-		<div id="sideboard-datetime-day"><?=date("l")?></div>
-		<div id="sideboard-datetime-month"><?=date("F")?></div>
+		<div id="sideboard-datetime-day"><?=t(date("l"))?></div>
+		<div id="sideboard-datetime-month"><?=t(date("F"))?></div>
 		<div id="sideboard-datetime-year"><?=date("Y")?></div>
 	</div>
 </div>
