@@ -1,3 +1,10 @@
+bubba-frontend (2.1.7) vincent hugo; urgency=low
+
+  * Updates needed for language support in album
+  * Text updates
+
+ -- PA Nilsson <pa@excito.com>  Tue, 05 Oct 2010 16:22:06 +0200
+
 bubba-frontend (2.1.6) vincent hugo; urgency=low
 
   * Upload to correct repos
